--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.11.0
 Django==6.0
+django-admin-interface==0.31.1
+django-admin-rangefilter==0.13.5
+django-colorfield==0.14.0
 django-environ==0.12.0
 django-jalali==7.4.0
-django-jalali-date==2.0.0
 jalali_core==1.0.0
 jdatetime==5.2.0
 mysqlclient==2.2.7
 pillow==12.0.0
+python-slugify==8.0.4
 sqlparse==0.5.4
+text-unidecode==1.3
