--- a/SornaFlow/.env.example
+++ b/SornaFlow/.env.example
@@ -1,5 +1,5 @@
 # ============================
-# 🔐 Django Settings
+#  Django Settings
 # ============================
 
 SECRET_KEY=your_secret_key_here
@@ -13,4 +13,4 @@ DB_NAME=sorna_db
 DB_USER=sorna_user
 DB_PASSWORD=your_db_password
 DB_HOST=db
-DB_PORT=3306
+DB_PORT=3307
